--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
   <head>
     <title>Psyche</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag  'application', media: 'all' %>
   </head>
 
   <body>
     <%= yield %>
+
+    <%= javacsript_pack_tag 'application' %>
   </body>
 </html>
