--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,10 @@
     <title>Psyche</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag  'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
     <%= yield %>
-
-    <%= javacsript_pack_tag 'application' %>
   </body>
 </html>
