--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Psyche</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag  'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'App' %>
   </head>
 
   <body>
